# task5-ros2-jahnavisrikoti

task 5/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
task 5/ros2_ws/install/: local_setup.sh  setup.sh
task 5/ros2_ws/install/drone_fleet/lib/drone_fleet/: drone_node  fleet_manager  health_monitor
task 5/ros2_ws/install/drone_fleet/share/ament_index/resource_index/package_run_dependencies/: drone_fleet
task 5/ros2_ws/install/drone_fleet/share/ament_index/resource_index/parent_prefix_path/: drone_fleet
task 5/ros2_ws/install/drone_fleet/share/drone_fleet/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
task 5/ros2_ws/install/drone_fleet/share/drone_fleet/cmake/: drone_fleetConfig-version.cmake  drone_fleetConfig.cmake
task 5/ros2_ws/install/drone_fleet/share/drone_fleet/environment/: ament_prefix_path.dsv  path.dsv
task 5/ros2_ws/install/drone_fleet/share/drone_fleet/launch/: fleet.launch.py
task 5/ros2_ws/log/: latest_build
task 5/ros2_ws/src/drone_fleet/: CMakeLists.txt  package.xml
task 5/ros2_ws/src/drone_fleet/include/drone_fleet/: AutonomousDrone.hpp  Drone.hpp  DroneExceptions.hpp  MissionDrone.hpp  Vehicle.hpp
task 5/ros2_ws/src/drone_fleet/launch/: fleet.launch.py
task 5/ros2_ws/src/drone_fleet/src/: AutonomousDrone.cpp  Drone.cpp  MissionDrone.cpp  Vehicle.cpp  drone_node.cpp  fleet_manager.cpp  health_monitor.cpp
